--- a/frontend/donationcamps.html
+++ b/frontend/donationcamps.html
@@ -1,258 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Donation Camps | BloodBridge</title>
 
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: "Poppins", sans-serif;
-    }
+  <!-- CSS -->
+  <link rel="stylesheet" href="css/variables.css">
+  <link rel="stylesheet" href="css/style.css">
 
-    body {
-      background-color: #fff;
-      color: #222;
-    }
-
-    /* Navbar */
-    .navbar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 1rem 5%;
-      background: #fff;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      position: sticky;
-      top: 0;
-      z-index: 100;
-    }
-
-    .logo {
-      font-size: 1.4rem;
-      font-weight: 700;
-      color: #d81b60;
-    }
-
-    nav ul {
-      display: flex;
-      list-style: none;
-      gap: 1.5rem;
-    }
-
-    nav ul li a {
-      text-decoration: none;
-      color: #333;
-      transition: 0.3s;
-    }
-
-    nav ul li a:hover {
-      color: #d81b60;
-    }
-
-    .nav-buttons .btn-primary,
-    .nav-buttons .btn-outline {
-      border: none;
-      padding: 0.6rem 1.2rem;
-      border-radius: 25px;
-      font-weight: 600;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-
-    .btn-primary {
-      background: linear-gradient(90deg, #d81b60, #1976d2);
-      color: white;
-    }
-
-    .btn-outline {
-      background: white;
-      color: #d81b60;
-      border: 2px solid #d81b60;
-    }
-
-    .btn-outline:hover {
-      background: #d81b60;
-      color: #fff;
-    }
-
-    /* Main Section */
-    main {
-      padding: 2rem 5%;
-    }
-
-    h1 {
-      font-size: 2.2rem;
-      margin-bottom: 0.5rem;
-    }
-
-    p.subtitle {
-      color: #666;
-      margin-bottom: 2rem;
-    }
-
-    /* Search Bar */
-    .search-bar {
-      display: flex;
-      align-items: center;
-      background: #fff;
-      border: 1px solid #ddd;
-      border-radius: 10px;
-      padding: 0.8rem 1rem;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-      margin-bottom: 2rem;
-    }
-
-    .search-bar input {
-      width: 100%;
-      border: none;
-      outline: none;
-      font-size: 1rem;
-      padding-left: 0.5rem;
-    }
-
-    .search-bar i {
-      color: #888;
-    }
-
-    /* Stats Cards */
-    .stats {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 1.5rem;
-      margin-bottom: 2.5rem;
-    }
-
-    .stat-card {
-      flex: 1;
-      min-width: 200px;
-      background: #fff;
-      padding: 1rem 1.5rem;
-      border-radius: 10px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-      border: 1px solid #eee;
-    }
-
-    .stat-card h3 {
-      color: #555;
-      font-weight: 500;
-      font-size: 1rem;
-    }
-
-    .stat-card h2 {
-      font-size: 1.8rem;
-      margin-top: 0.5rem;
-      color: #d81b60;
-    }
-
-    .stat-card:nth-child(2) h2 {
-      color: #2e7d32;
-    }
-
-    /* Camp Cards */
-    .camp-card {
-      background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 3px 10px rgba(0,0,0,0.08);
-      padding: 1.5rem;
-      margin-bottom: 1.5rem;
-      border: 1px solid #eee;
-      transition: transform 0.3s;
-    }
-
-    .camp-card:hover {
-      transform: translateY(-4px);
-    }
-
-    .camp-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      flex-wrap: wrap;
-    }
-
-    .camp-header h2 {
-      font-size: 1.2rem;
-    }
-
-    .status {
-      background: #2e7d32;
-      color: #fff;
-      font-size: 0.8rem;
-      padding: 0.3rem 0.8rem;
-      border-radius: 15px;
-    }
-
-    .camp-details {
-      margin-top: 0.8rem;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 2rem;
-    }
-
-    .detail {
-      display: flex;
-      align-items: center;
-      gap: 0.5rem;
-    }
-
-    .detail i {
-      color: #d81b60;
-    }
-
-    .camp-footer {
-      margin-top: 1rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      flex-wrap: wrap;
-    }
-
-    .progress-container {
-      width: 100%;
-      background: #f1f1f1;
-      border-radius: 10px;
-      height: 8px;
-      overflow: hidden;
-      margin-top: 0.5rem;
-    }
-
-    .progress-bar {
-      height: 8px;
-      background: #d81b60;
-      width: 10%;
-      transition: width 0.5s;
-    }
-
-    .btn-book {
-      background: linear-gradient(90deg, #d81b60, #1976d2);
-      color: white;
-      border: none;
-      padding: 0.6rem 1.2rem;
-      border-radius: 8px;
-      font-weight: 600;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-
-    .btn-book:hover {
-      opacity: 0.9;
-    }
-
-    @media (max-width: 768px) {
-      .camp-details {
-        flex-direction: column;
-        gap: 1rem;
-      }
-
-      .stats {
-        flex-direction: column;
-      }
-    }
-  </style>
+  <!-- AOS Animation Library -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -260,39 +19,90 @@
   <div id="navbar-placeholder"></div>
 
   <!-- Main Section -->
-  <main>
-    <h1>Donation Camps</h1>
-    <p class="subtitle">Find blood donation camps near you and schedule your appointment</p>
+  <main style="padding: 4rem 5%; min-height: 80vh;">
+    <div style="text-align: center; margin-bottom: 3rem;" data-aos="fade-down">
+      <h1 style="font-size: 3rem; margin-bottom: 1rem; color: var(--text-dark);">Donation <span
+          style="background: var(--primary-gradient); -webkit-background-clip: text; background-clip: text; -webkit-text-fill-color: transparent;">Camps</span>
+      </h1>
+      <p class="subtitle" style="color: var(--text-light); font-size: 1.2rem;">Find blood donation camps near you and
+        schedule your appointment</p>
+    </div>
 
     <!-- Search Bar -->
-    <div class="search-bar">
-      <i>🔍</i>
-      <input type="text" placeholder="Search by camp name or location..." id="searchInput" />
+    <div class="search-bar"
+      style="max-width: 600px; margin: 0 auto 3rem; display: flex; align-items: center; background: white; padding: 1rem 1.5rem; border-radius: 50px; box-shadow: var(--shadow-md);"
+      data-aos="fade-up">
+      <i style="color: var(--primary-color); font-size: 1.2rem;">🔍</i>
+      <input type="text" placeholder="Search by camp name or location..." id="searchInput"
+        style="border: none; outline: none; width: 100%; padding-left: 1rem; font-size: 1rem;" />
     </div>
 
     <!-- Stats -->
-    <div class="stats">
-      <div class="stat-card">
-        <h3>Total Camps</h3>
-        <h2 id="totalCamps">0</h2>
+    <div class="stats" style="margin-top: 0; background: transparent; box-shadow: none; padding: 0;" data-aos="fade-up"
+      data-aos-delay="100">
+      <div class="stat-card"
+        style="background: white; padding: 1.5rem; border-radius: var(--radius-md); box-shadow: var(--shadow-sm); text-align: center;">
+        <h3 style="color: var(--text-light); font-size: 1rem;">Total Camps</h3>
+        <h2 id="totalCamps" style="color: var(--primary-color); font-size: 2.5rem;">0</h2>
       </div>
-      <div class="stat-card">
-        <h3>Total Capacity</h3>
-        <h2 id="availableSlots">0</h2>
+      <div class="stat-card"
+        style="background: white; padding: 1.5rem; border-radius: var(--radius-md); box-shadow: var(--shadow-sm); text-align: center;">
+        <h3 style="color: var(--text-light); font-size: 1rem;">Total Capacity</h3>
+        <h2 id="availableSlots" style="color: #2e7d32; font-size: 2.5rem;">0</h2>
       </div>
-      <div class="stat-card">
-        <h3>This Month</h3>
-        <h2 id="thisMonth">0</h2>
+      <div class="stat-card"
+        style="background: white; padding: 1.5rem; border-radius: var(--radius-md); box-shadow: var(--shadow-sm); text-align: center;">
+        <h3 style="color: var(--text-light); font-size: 1rem;">This Month</h3>
+        <h2 id="thisMonth" style="color: var(--secondary-color); font-size: 2.5rem;">0</h2>
       </div>
     </div>
 
     <!-- Camp Cards (loaded from backend) -->
-    <div id="campCards">
+    <div id="campCards"
+      style="display: grid; grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); gap: 2rem; margin-top: 3rem;">
       <!-- Filled dynamically -->
     </div>
   </main>
 
+  <!-- Footer -->
+  <footer>
+    <div class="footer-container">
+      <div class="footer-brand">
+        <h3>🩸 BloodBank</h3>
+        <p>Connecting donors, hospitals, and blood banks to save lives.</p>
+      </div>
+      <div class="footer-links">
+        <h4>Quick Links</h4>
+        <ul>
+          <li><a href="homepage.html">Home</a></li>
+          <li><a href="donationcamps.html">Donation Camps</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact_page.html">Contact</a></li>
+        </ul>
+      </div>
+      <div class="footer-links">
+        <h4>Resources</h4>
+        <ul>
+          <li><a href="#">Blood Types Guide</a></li>
+          <li><a href="#">Donation FAQs</a></li>
+          <li><a href="#">Health Requirements</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+        </ul>
+      </div>
+    </div>
+    <p class="copyright">© 2025 BloodBank Management System. All rights reserved.</p>
+  </footer>
+
+  <!-- Scripts -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
+    AOS.init({
+      once: true,
+      offset: 100,
+      duration: 800,
+      easing: 'ease-out-cubic',
+    });
+
     const searchInput = document.getElementById('searchInput');
     const campCardsContainer = document.getElementById('campCards');
     const totalCampsEl = document.getElementById('totalCamps');
@@ -303,37 +113,74 @@
 
     function renderCamps(camps) {
       if (!camps || camps.length === 0) {
-        campCardsContainer.innerHTML = '<p>No donation camps available right now.</p>';
+        campCardsContainer.innerHTML = '<p style="grid-column: 1/-1; text-align: center; color: var(--text-light);">No donation camps available right now.</p>';
         return;
       }
 
       campCardsContainer.innerHTML = '';
 
-      camps.forEach(camp => {
+      camps.forEach((camp, index) => {
         const capacity = parseInt(camp.capacity || 0, 10);
         const progress = Math.max(5, Math.min(100, (capacity > 0 ? (capacity / (capacity * 2)) * 100 : 10)));
 
         const card = document.createElement('div');
         card.className = 'camp-card';
-        card.innerHTML = `
-          <div class="camp-header">
-            <h2>${camp.title}</h2>
-            <span class="status">Upcoming</span>
-          </div>
-          <p>${camp.description || ''}</p>
+        card.setAttribute('data-aos', 'fade-up');
+        card.setAttribute('data-aos-delay', (index * 100).toString());
 
-          <div class="camp-details">
-            <div class="detail">📅 <span><b>Date:</b> ${camp.date}</span></div>
-            <div class="detail">⏰ <span><b>Time:</b> ${camp.time}</span></div>
-            <div class="detail">📍 <span><b>Location:</b> ${camp.address}, ${camp.city}</span></div>
-            <div class="detail">🩸 <span><b>Capacity:</b> ${capacity}</span></div>
+        // Inline styles for the dynamic card to match design system
+        card.style.cssText = `
+          background: white;
+          border-radius: var(--radius-md);
+          box-shadow: var(--shadow-sm);
+          padding: 2rem;
+          transition: var(--transition);
+          border: 1px solid rgba(0,0,0,0.03);
+          position: relative;
+          overflow: hidden;
+        `;
+
+        // Add hover effect via JS since it's dynamic or rely on CSS class if added to style.css
+        card.onmouseenter = () => {
+          card.style.transform = 'translateY(-5px)';
+          card.style.boxShadow = 'var(--shadow-md)';
+        };
+        card.onmouseleave = () => {
+          card.style.transform = 'translateY(0)';
+          card.style.boxShadow = 'var(--shadow-sm)';
+        };
+
+        card.innerHTML = `
+          <div class="camp-header" style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 1rem;">
+            <h2 style="font-size: 1.4rem; color: var(--text-dark); margin: 0;">${camp.title}</h2>
+            <span class="status" style="background: rgba(46, 125, 50, 0.1); color: #2e7d32; padding: 0.3rem 0.8rem; border-radius: 20px; font-size: 0.85rem; font-weight: 600;">Upcoming</span>
+          </div>
+          <p style="color: var(--text-light); margin-bottom: 1.5rem; font-size: 0.95rem;">${camp.description || ''}</p>
+
+          <div class="camp-details" style="display: grid; gap: 0.8rem; margin-bottom: 1.5rem;">
+            <div class="detail" style="display: flex; align-items: center; gap: 0.8rem; color: var(--text-dark);">
+              <span style="width: 30px; height: 30px; background: var(--bg-light); border-radius: 50%; display: flex; align-items: center; justify-content: center;">📅</span> 
+              <span><b>Date:</b> ${camp.date}</span>
+            </div>
+            <div class="detail" style="display: flex; align-items: center; gap: 0.8rem; color: var(--text-dark);">
+              <span style="width: 30px; height: 30px; background: var(--bg-light); border-radius: 50%; display: flex; align-items: center; justify-content: center;">⏰</span> 
+              <span><b>Time:</b> ${camp.time}</span>
+            </div>
+            <div class="detail" style="display: flex; align-items: center; gap: 0.8rem; color: var(--text-dark);">
+              <span style="width: 30px; height: 30px; background: var(--bg-light); border-radius: 50%; display: flex; align-items: center; justify-content: center;">📍</span> 
+              <span><b>Location:</b> ${camp.address}, ${camp.city}</span>
+            </div>
+            <div class="detail" style="display: flex; align-items: center; gap: 0.8rem; color: var(--text-dark);">
+              <span style="width: 30px; height: 30px; background: var(--bg-light); border-radius: 50%; display: flex; align-items: center; justify-content: center;">🩸</span> 
+              <span><b>Capacity:</b> ${capacity}</span>
+            </div>
           </div>
 
           <div class="camp-footer">
-            <div class="progress-container">
-              <div class="progress-bar" style="width: ${progress}%;"></div>
+            <div class="progress-container" style="width: 100%; height: 6px; background: #f0f0f0; border-radius: 10px; overflow: hidden; margin-bottom: 1.5rem;">
+              <div class="progress-bar" style="width: ${progress}%; height: 100%; background: var(--primary-gradient);"></div>
             </div>
-            <button class="btn-book" style="margin:10px;" data-camp-id="${camp.camp_id}">Book Appointment</button>
+            <button class="btn-book" style="width: 100%; padding: 0.8rem; background: var(--primary-gradient); color: white; border: none; border-radius: var(--radius-full); font-weight: 600; cursor: pointer; transition: opacity 0.3s;" data-camp-id="${camp.camp_id}">Book Appointment</button>
           </div>
         `;
         campCardsContainer.appendChild(card);
@@ -341,6 +188,8 @@
         const bookBtn = card.querySelector('.btn-book');
         if (bookBtn) {
           bookBtn.addEventListener('click', () => bookAppointment(camp.camp_id, bookBtn));
+          bookBtn.onmouseenter = () => bookBtn.style.opacity = '0.9';
+          bookBtn.onmouseleave = () => bookBtn.style.opacity = '1';
         }
       });
     }
@@ -386,7 +235,7 @@
       } catch (err) {
         console.error('Error loading camps:', err);
         campCardsContainer.innerHTML =
-          '<p style="color:red; white-space:pre-line;">Failed to load donation camps.\\n' +
+          '<p style="color:red; white-space:pre-line; text-align:center;">Failed to load donation camps.\\n' +
           (err.message || '') +
           '</p>';
       }
@@ -449,4 +298,5 @@
   </script>
   <script src="navbar.js"></script>
 </body>
+
 </html>
