--- a/frontend/hospital_dashboard.html
+++ b/frontend/hospital_dashboard.html
@@ -1,155 +1,312 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hospital Dashboard</title>
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="css/variables.css">
+  <link rel="stylesheet" href="css/style.css">
+
+  <!-- AOS Animation Library -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
   <style>
     body {
-      font-family: 'Poppins', sans-serif;
-      background: #f5f6fa;
-      margin: 0;
-      padding: 0;
+      background: #f9fafb;
+      min-height: 100vh;
     }
-    header {
-      background-color: crimson;
-      color: white;
-      padding: 15px;
-      text-align: center;
-      font-size: 22px;
-    }
-    .container {
-      width: 90%;
-      max-width: 900px;
-      margin: 30px auto;
+
+    /* Navbar Override */
+    .dashboard-nav {
       background: white;
-      padding: 25px;
-      border-radius: 12px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      box-shadow: var(--shadow-sm);
+      padding: 0.8rem 2rem;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      position: sticky;
+      top: 0;
+      z-index: 100;
     }
-    h2 { color: crimson; }
-    input, textarea {
-      width: 100%;
-      padding: 10px;
-      margin-top: 8px;
-      margin-bottom: 15px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      font-size: 15px;
+
+    .nav-logo {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      font-weight: 700;
+      font-size: 1.2rem;
+      color: var(--primary-color);
     }
-    button {
-      background: crimson;
+
+    .nav-icon {
+      width: 40px;
+      height: 40px;
+      border-radius: 10px;
+      background: var(--primary-gradient);
+      display: flex;
+      justify-content: center;
+      align-items: center;
       color: white;
-      border: none;
-      padding: 10px 18px;
-      border-radius: 6px;
-      font-size: 16px;
-      cursor: pointer;
+      font-size: 1.2rem;
     }
+
+    .container {
+      max-width: 1000px;
+      margin: 2rem auto;
+      padding: 0 1.5rem;
+    }
+
+    .dashboard-card {
+      background: white;
+      border-radius: var(--radius-lg);
+      box-shadow: var(--shadow-md);
+      padding: 2rem;
+      margin-bottom: 2rem;
+      border: 1px solid var(--border-color);
+    }
+
+    h2 {
+      color: var(--text-dark);
+      margin-top: 0;
+      margin-bottom: 1.5rem;
+      font-size: 1.5rem;
+      border-bottom: 2px solid var(--bg-light);
+      padding-bottom: 0.5rem;
+      display: inline-block;
+    }
+
+    /* Form Styling */
+    form {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 1.2rem;
+    }
+
+    form input,
+    form textarea,
+    form select {
+      width: 100%;
+      padding: 0.8rem;
+      border: 1px solid var(--border-color);
+      border-radius: var(--radius-sm);
+      font-size: 1rem;
+      transition: var(--transition);
+      outline: none;
+    }
+
+    form input:focus,
+    form textarea:focus {
+      border-color: var(--primary-color);
+      box-shadow: 0 0 0 3px rgba(216, 27, 96, 0.1);
+    }
+
+    form textarea {
+      grid-column: span 2;
+      resize: vertical;
+    }
+
+    .form-actions {
+      grid-column: span 2;
+      display: flex;
+      justify-content: flex-end;
+    }
+
+    /* Table Styling */
+    .table-container {
+      overflow-x: auto;
+    }
+
     table {
       width: 100%;
       border-collapse: collapse;
-      margin-top: 15px;
+      margin-top: 1rem;
     }
-    th, td {
-      padding: 12px;
-      border-bottom: 1px solid #eee;
-      text-align: center;
+
+    th,
+    td {
+      padding: 1rem;
+      text-align: left;
+      border-bottom: 1px solid var(--border-color);
     }
-    th { background: #f1f2f6; }
+
+    th {
+      background: var(--bg-light);
+      color: var(--text-dark);
+      font-weight: 600;
+      white-space: nowrap;
+    }
+
+    tr:hover td {
+      background: #fdfbfb;
+    }
+
     .delete-btn {
-      background: #d63031;
-      color: white;
-      padding: 6px 10px;
-      border-radius: 5px;
+      background: #fee2e2;
+      color: #b91c1c;
+      padding: 0.5rem 1rem;
+      border-radius: var(--radius-sm);
       border: none;
       cursor: pointer;
+      font-weight: 600;
+      transition: var(--transition);
+    }
+
+    .delete-btn:hover {
+      background: #fecaca;
+    }
+
+    @media (max-width: 768px) {
+      form {
+        grid-template-columns: 1fr;
+      }
+
+      form textarea,
+      .form-actions {
+        grid-column: span 1;
+      }
     }
   </style>
 </head>
+
 <body>
-  <header>Hospital Dashboard - Manage Donation Camps</header>
+  <header class="dashboard-nav">
+    <div class="nav-logo">
+      <div class="nav-icon">🏥</div>
+      <span>Hospital Dashboard</span>
+    </div>
+    <div style="font-weight: 500; color: var(--text-light);">Manage Donation Camps</div>
+  </header>
 
   <div class="container">
-    <h2>Add a New Camp</h2>
-    <form id="campForm">
-      <input type="text" name="title" placeholder="Camp Title" required>
-      <textarea name="description" placeholder="Description" rows="3"></textarea>
-      <input type="text" name="address" placeholder="Address" required>
-      <input type="text" name="city" placeholder="City" required>
-      <input type="date" name="date" required>
-      <input type="time" name="time" required>
-      <input type="number" name="capacity" placeholder="Capacity" required>
-      <button type="submit">Add Camp</button>
-    </form>
+    <div class="dashboard-card" data-aos="fade-up">
+      <h2>Add a New Camp</h2>
+      <form id="campForm">
+        <input type="text" name="title" placeholder="Camp Title" required>
+        <input type="text" name="city" placeholder="City" required>
+        <textarea name="description" placeholder="Description (Optional)" rows="3"></textarea>
+        <input type="text" name="address" placeholder="Full Address" required>
+        <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 1rem;">
+          <input type="date" name="date" required>
+          <input type="time" name="time" required>
+        </div>
+        <input type="number" name="capacity" placeholder="Capacity (e.g. 100)" required>
 
-    <h2>Existing Camps</h2>
-    <table>
-      <thead>
-        <tr>
-          <th>Title</th>
-          <th>City</th>
-          <th>Date</th>
-          <th>Time</th>
-          <th>Capacity</th>
-          <th>Action</th>
-        </tr>
-      </thead>
-      <tbody id="campList">
-        <!-- Populated dynamically -->
-      </tbody>
-    </table>
+        <div class="form-actions">
+          <button type="submit" class="btn-primary">Add Camp</button>
+        </div>
+      </form>
+    </div>
+
+    <div class="dashboard-card" data-aos="fade-up" data-aos-delay="100">
+      <h2>Existing Camps</h2>
+      <div class="table-container">
+        <table>
+          <thead>
+            <tr>
+              <th>Title</th>
+              <th>City</th>
+              <th>Date</th>
+              <th>Time</th>
+              <th>Capacity</th>
+              <th>Action</th>
+            </tr>
+          </thead>
+          <tbody id="campList">
+            <!-- Populated dynamically -->
+            <tr>
+              <td colspan="6" style="text-align:center; color: var(--text-light);">Loading camps...</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
   </div>
 
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
+    AOS.init({
+      once: true,
+      duration: 800,
+      easing: 'ease-out-cubic',
+    });
+
     const form = document.getElementById('campForm');
     const campList = document.getElementById('campList');
 
     // Load existing camps
     async function loadCamps() {
-      const res = await fetch('../backend/get_camps.php');
-      const camps = await res.json();
-      campList.innerHTML = '';
+      try {
+        const res = await fetch('../backend/get_camps.php');
+        const camps = await res.json();
+        campList.innerHTML = '';
 
-      if (camps.length === 0) {
-        campList.innerHTML = '<tr><td colspan="6">No camps available.</td></tr>';
-        return;
+        if (camps.length === 0) {
+          campList.innerHTML = '<tr><td colspan="6" style="text-align:center; color: var(--text-light); padding: 2rem;">No camps available. Add one above!</td></tr>';
+          return;
+        }
+
+        camps.forEach(camp => {
+          const row = `
+            <tr>
+              <td><strong>${camp.title}</strong></td>
+              <td>${camp.city}</td>
+              <td>${camp.date}</td>
+              <td>${camp.time}</td>
+              <td>${camp.capacity}</td>
+              <td><button class="delete-btn" onclick="deleteCamp(${camp.camp_id})">Delete</button></td>
+            </tr>`;
+          campList.innerHTML += row;
+        });
+      } catch (error) {
+        console.error('Error loading camps:', error);
+        campList.innerHTML = '<tr><td colspan="6" style="text-align:center; color: red;">Failed to load camps.</td></tr>';
       }
-
-      camps.forEach(camp => {
-        const row = `
-          <tr>
-            <td>${camp.title}</td>
-            <td>${camp.city}</td>
-            <td>${camp.date}</td>
-            <td>${camp.time}</td>
-            <td>${camp.capacity}</td>
-            <td><button class="delete-btn" onclick="deleteCamp(${camp.camp_id})">Delete</button></td>
-          </tr>`;
-        campList.innerHTML += row;
-      });
     }
 
     // Add new camp
     form.addEventListener('submit', async (e) => {
       e.preventDefault();
       const formData = new FormData(form);
-      const response = await fetch('../backend/add_camp.php', {
-        method: 'POST',
-        body: formData
-      });
-      const result = await response.text();
-      alert(result);
-      form.reset();
-      loadCamps();
+
+      // Add loading state
+      const btn = form.querySelector('button');
+      const originalText = btn.textContent;
+      btn.disabled = true;
+      btn.textContent = 'Adding...';
+
+      try {
+        const response = await fetch('../backend/add_camp.php', {
+          method: 'POST',
+          body: formData
+        });
+        const result = await response.text();
+        alert(result);
+        form.reset();
+        loadCamps();
+      } catch (error) {
+        console.error('Error adding camp:', error);
+        alert('Failed to add camp. Please try again.');
+      } finally {
+        btn.disabled = false;
+        btn.textContent = originalText;
+      }
     });
 
     // Delete camp
     async function deleteCamp(id) {
-      if (confirm('Delete this camp?')) {
-        const res = await fetch(`../backend/delete_camp.php?id=${id}`);
-        const result = await res.text();
-        alert(result);
-        loadCamps();
+      if (confirm('Are you sure you want to delete this camp? This action cannot be undone.')) {
+        try {
+          const res = await fetch(`../backend/delete_camp.php?id=${id}`);
+          const result = await res.text();
+          alert(result);
+          loadCamps();
+        } catch (error) {
+          console.error('Error deleting camp:', error);
+          alert('Failed to delete camp.');
+        }
       }
     }
 
@@ -157,4 +314,5 @@
     loadCamps();
   </script>
 </body>
+
 </html>
