--- a/frontend/register.html
+++ b/frontend/register.html
@@ -1,165 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Blood Donation Management - Auth</title>
-  <style>
-    * {
-      box-sizing: border-box;
-      font-family: "Poppins", sans-serif;
-    }
 
+  <!-- CSS -->
+  <link rel="stylesheet" href="css/variables.css">
+  <link rel="stylesheet" href="css/style.css">
+
+  <!-- AOS Animation Library -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+  <style>
     body {
-      background: #f9fafb;
+      background: linear-gradient(135deg, #fdfbfb 0%, #ebedee 100%);
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+      min-height: 100vh;
       margin: 0;
     }
 
-    .container {
-      background: #fff;
-      width: 420px;
-      padding: 2rem 2.5rem;
-      border-radius: 20px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
+    .auth-container {
+      background: rgba(255, 255, 255, 0.9);
+      backdrop-filter: blur(10px);
+      width: 100%;
+      max-width: 450px;
+      padding: 2.5rem;
+      border-radius: var(--radius-lg);
+      box-shadow: var(--shadow-lg);
       text-align: center;
-      animation: fadeIn 0.6s ease;
+      border: 1px solid rgba(255, 255, 255, 0.5);
     }
 
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(15px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    .logo {
-      background: linear-gradient(145deg, #ff4d4d, #ff0000);
-      width: 60px;
-      height: 60px;
-      border-radius: 15px;
+    .logo-icon {
+      width: 70px;
+      height: 70px;
+      background: var(--primary-gradient);
+      border-radius: var(--radius-md);
       display: flex;
       justify-content: center;
       align-items: center;
-      margin: 0 auto 12px;
-    }
-
-    .logo::before {
-      content: "💧";
-      font-size: 28px;
-      color: #fff;
-    }
-
-    h2 {
-      margin: 8px 0 6px;
-      color: #111827;
-    }
-
-    p {
-      font-size: 0.9rem;
-      color: #6b7280;
-      margin-bottom: 1.5rem;
+      margin: 0 auto 1.5rem;
+      font-size: 2rem;
+      color: white;
+      box-shadow: var(--shadow-md);
     }
 
     .tabs {
       display: flex;
       justify-content: center;
-      background: #f3f4f6;
-      border-radius: 12px;
-      overflow: hidden;
-      margin-bottom: 1.5rem;
+      background: var(--bg-light);
+      border-radius: var(--radius-md);
+      padding: 0.3rem;
+      margin-bottom: 2rem;
     }
 
     .tab {
       flex: 1;
-      padding: 0.7rem 0;
+      padding: 0.8rem 0;
       cursor: pointer;
       font-weight: 600;
       background: none;
       border: none;
-      color: #6b7280;
-      transition: 0.3s ease;
+      color: var(--text-light);
+      transition: var(--transition);
+      border-radius: var(--radius-sm);
     }
 
     .tab.active {
-      color: #111827;
-      background: #fff;
-      border-bottom: 3px solid #ff3b3b;
+      color: var(--primary-color);
+      background: white;
+      box-shadow: var(--shadow-sm);
     }
 
     form {
       display: none;
       flex-direction: column;
-      gap: 1rem;
+      gap: 1.2rem;
       text-align: left;
-      animation: fadeForm 0.3s ease;
-    }
-
-    @keyframes fadeForm {
-      from { opacity: 0; transform: translateY(10px); }
-      to { opacity: 1; transform: translateY(0); }
     }
 
     form.active {
       display: flex;
+      animation: fadeIn 0.4s ease-out;
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(10px);
+      }
+
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
 
     label {
       font-weight: 500;
-      color: #374151;
-      font-size: 0.9rem;
+      color: var(--text-dark);
+      font-size: 0.95rem;
+      margin-bottom: -0.5rem;
     }
 
-    select, input {
-      padding: 0.7rem;
-      border-radius: 8px;
-      border: 1px solid #d1d5db;
-      font-size: 0.95rem;
+    input,
+    select {
+      padding: 0.8rem 1rem;
+      border-radius: var(--radius-sm);
+      border: 1px solid var(--border-color);
+      font-size: 1rem;
       outline: none;
       width: 100%;
-      transition: border-color 0.2s;
+      transition: var(--transition);
+      background: white;
     }
 
-    select:focus, input:focus {
-      border-color: #ff3b3b;
+    input:focus,
+    select:focus {
+      border-color: var(--primary-color);
+      box-shadow: 0 0 0 3px rgba(216, 27, 96, 0.1);
     }
 
-    .btn {
-      background: linear-gradient(to right, #ff3b3b, #3b82f6);
+    .btn-auth {
+      background: var(--primary-gradient);
       color: white;
       border: none;
-      padding: 0.8rem;
-      border-radius: 8px;
-      font-size: 1rem;
+      padding: 1rem;
+      border-radius: var(--radius-md);
+      font-size: 1.1rem;
       font-weight: 600;
       cursor: pointer;
-      transition: 0.2s ease;
+      transition: var(--transition);
+      margin-top: 1rem;
     }
 
-    .btn:hover {
-      transform: scale(1.02);
+    .btn-auth:hover {
+      transform: translateY(-2px);
+      box-shadow: var(--shadow-md);
     }
 
     small {
       display: block;
-      margin-top: 10px;
-      font-size: 0.8rem;
-      color: #6b7280;
-      text-align: center;
+      margin-top: 1.5rem;
+      font-size: 0.9rem;
+      color: var(--text-light);
     }
 
     small a {
-      color: #2563eb;
+      color: var(--primary-color);
       text-decoration: none;
+      font-weight: 600;
     }
   </style>
 </head>
+
 <body>
-  <div class="container">
-    <div class="logo"></div>
-    <h2>Welcome to BloodBank</h2>
-    <p>Sign in to your account or create a new one</p>
+  <div class="auth-container" data-aos="zoom-in">
+    <div class="logo-icon">💧</div>
+    <h2 style="margin-bottom: 0.5rem; color: var(--text-dark);">Welcome Back</h2>
+    <p style="color: var(--text-light); margin-bottom: 2rem;">Sign in to save lives or manage donations</p>
 
     <div class="tabs">
       <button class="tab active" id="signInTab">Sign In</button>
@@ -167,9 +170,9 @@
     </div>
 
     <!-- SIGN IN FORM -->
-    <form id="signInForm" class="active" method = "POST">
+    <form id="signInForm" class="active" method="POST">
       <label for="signin-role">I am a</label>
-      <select id="signin-role" name = "role"required>
+      <select id="signin-role" name="role" required>
         <option value="donor">Donor</option>
       </select>
 
@@ -178,111 +181,143 @@
 
       <label>Password</label>
       <input type="password" id="signin-password" name="password" placeholder="********" required />
-      <button type="submit" class="btn">Sign In</button>
+
+      <button type="submit" class="btn-auth">Sign In</button>
+
+      <small>Don't have an account? <a href="#" id="switchToRegister">Create one</a></small>
     </form>
 
     <!-- REGISTER FORM -->
     <form id="registerForm" method="POST">
-
       <label for="register-role">I want to register as a</label>
       <select id="register-role" name="role" required>
         <option value="donor">Donor</option>
       </select>
-  <label>Full Name</label>
-  <input type="text" id="fullname" name="full_name" placeholder="John Doe" required />
 
-  <label>Email</label>
-  <input type="email" id="email" name="email" placeholder="you@example.com" required />
+      <label>Full Name</label>
+      <input type="text" id="fullname" name="full_name" placeholder="John Doe" required />
 
-  <label>Phone Number</label>
-  <input type="tel" id="phone" name="phone" placeholder="+91 0000000000" required />
+      <label>Email</label>
+      <input type="email" id="email" name="email" placeholder="you@example.com" required />
 
-  <label>Password</label>
-  <input type="password" id="password" name="password" placeholder="********" required />
+      <label>Phone Number</label>
+      <input type="tel" id="phone" name="phone" placeholder="+91 0000000000" required />
 
-  <label>Confirm Password</label>
-  <input type="password" id="confirmPassword" name="confirm_password" placeholder="********" required />
+      <label>Password</label>
+      <input type="password" id="password" name="password" placeholder="********" required />
 
-  <button type="submit" class="btn">Create Account</button>
-</form>
+      <label>Confirm Password</label>
+      <input type="password" id="confirmPassword" name="confirm_password" placeholder="********" required />
 
+      <button type="submit" class="btn-auth">Create Account</button>
 
+      <small>Already have an account? <a href="#" id="switchToSignIn">Sign In</a></small>
+    </form>
+  </div>
+
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
-  const signInTab = document.getElementById("signInTab");
-  const registerTab = document.getElementById("registerTab");
-  const signInForm = document.getElementById("signInForm");
-  const registerForm = document.getElementById("registerForm");
+    AOS.init({
+      once: true,
+      duration: 800,
+      easing: 'ease-out-cubic',
+    });
 
-  // Switch tabs
-  signInTab.addEventListener("click", () => {
-    signInTab.classList.add("active");
-    registerTab.classList.remove("active");
-    signInForm.classList.add("active");
-    registerForm.classList.remove("active");
-  });
+    const signInTab = document.getElementById("signInTab");
+    const registerTab = document.getElementById("registerTab");
+    const signInForm = document.getElementById("signInForm");
+    const registerForm = document.getElementById("registerForm");
+    const switchToRegister = document.getElementById("switchToRegister");
+    const switchToSignIn = document.getElementById("switchToSignIn");
 
-  registerTab.addEventListener("click", () => {
-    registerTab.classList.add("active");
-    signInTab.classList.remove("active");
-    registerForm.classList.add("active");
-    signInForm.classList.remove("active");
-  });
-
-  // ✅ Register form submission
-  registerForm.addEventListener("submit", async (e) => {
-    e.preventDefault();
-
-    const pass = document.getElementById("password").value;
-    const confirm = document.getElementById("confirmPassword").value;
-
-    if (pass !== confirm) {
-      alert("❌ Passwords do not match!");
-      return;
+    function showSignIn() {
+      signInTab.classList.add("active");
+      registerTab.classList.remove("active");
+      signInForm.classList.add("active");
+      registerForm.classList.remove("active");
     }
 
-    const formData = new FormData(registerForm);
-
-    try {
-      const response = await fetch("../backend/register.php", {
-        method: "POST",
-        body: formData,
-      });
-
-      const result = await response.text();
-      alert(result); // PHP message
-      registerForm.reset();
-    } catch (error) {
-      console.error(error);
-      alert("⚠️ Something went wrong. Please try again.");
+    function showRegister() {
+      registerTab.classList.add("active");
+      signInTab.classList.remove("active");
+      registerForm.classList.add("active");
+      signInForm.classList.remove("active");
     }
-  });
 
-  // ✅ Sign-in form submission (connects to backend/login.php)
-  signInForm.addEventListener("submit", async (e) => {
-    e.preventDefault();
+    // Switch tabs
+    signInTab.addEventListener("click", showSignIn);
+    registerTab.addEventListener("click", showRegister);
 
-    const formData = new FormData(signInForm);
+    // Switch via links
+    switchToRegister.addEventListener("click", (e) => {
+      e.preventDefault();
+      showRegister();
+    });
 
-    try {
-      const response = await fetch("../backend/login.php", {
-        method: "POST",
-        body: formData,
-      });
+    switchToSignIn.addEventListener("click", (e) => {
+      e.preventDefault();
+      showSignIn();
+    });
 
-      const result = await response.text();
-      alert(result); // Show PHP response
+    // ✅ Register form submission
+    registerForm.addEventListener("submit", async (e) => {
+      e.preventDefault();
 
-      if (result.includes("Welcome Donor")) {
-        // Optional: redirect to dashboard
-        window.location.href = "donor_profile.html";
+      const pass = document.getElementById("password").value;
+      const confirm = document.getElementById("confirmPassword").value;
+
+      if (pass !== confirm) {
+        alert("❌ Passwords do not match!");
+        return;
       }
 
-      signInForm.reset();
-    } catch (error) {
-      console.error(error);
-      alert("⚠️ Server error! Please try again later.");
-    }
-  });
-</script>
+      const formData = new FormData(registerForm);
+
+      try {
+        const response = await fetch("../backend/register.php", {
+          method: "POST",
+          body: formData,
+        });
+
+        const result = await response.text();
+        alert(result); // PHP message
+        if (result.toLowerCase().includes("success")) {
+          registerForm.reset();
+          showSignIn();
+        }
+      } catch (error) {
+        console.error(error);
+        alert("⚠️ Something went wrong. Please try again.");
+      }
+    });
+
+    // ✅ Sign-in form submission (connects to backend/login.php)
+    signInForm.addEventListener("submit", async (e) => {
+      e.preventDefault();
+
+      const formData = new FormData(signInForm);
+
+      try {
+        const response = await fetch("../backend/login.php", {
+          method: "POST",
+          body: formData,
+        });
+
+        const result = await response.text();
+        alert(result); // Show PHP response
+
+        if (result.includes("Welcome Donor")) {
+          // Optional: redirect to dashboard
+          window.location.href = "donor_profile.html";
+        }
+
+        signInForm.reset();
+      } catch (error) {
+        console.error(error);
+        alert("⚠️ Server error! Please try again later.");
+      }
+    });
+  </script>
 </body>
+
 </html>
